# autoware.universe

common/tier4_autoware_utils/: CMakeLists.txt
control/mpc_lateral_controller/: README.md
control/mpc_lateral_controller/src/: mpc.cpp  mpc_lateral_controller.cpp  mpc_utils.cpp
control/pid_longitudinal_controller/src/: pid_longitudinal_controller.cpp
control/predicted_path_checker/: CMakeLists.txt
control/trajectory_follower_node/: CMakeLists.txt  package.xml
control/trajectory_follower_node/scripts/: pympc_trajectory_follower.py
control/trajectory_follower_node/src/: controller_node.cpp  simple_trajectory_follower.cpp
control/vehicle_cmd_gate/src/: adapi_pause_interface.cpp  (+2 more)
planning/behavior_path_planner/: CMakeLists.txt  package.xml
planning/behavior_velocity_crosswalk_module/: CMakeLists.txt  README.md  package.xml
planning/behavior_velocity_planner/: CMakeLists.txt  README.md  crosswalk-design.md  package.xml
planning/behavior_velocity_planner_common/: package.xml
planning/behavior_velocity_walkway_module/: CMakeLists.txt  package.xml
planning/costmap_generator/: CMakeLists.txt  package.xml
planning/external_velocity_limit_selector/: CMakeLists.txt  package.xml
planning/freespace_planner/: CMakeLists.txt  package.xml
planning/freespace_planning_algorithms_python/: CMakeLists.txt  package.xml
planning/freespace_planning_algorithms_python/src/: astarrr.cpp
planning/mission_planner/: CMakeLists.txt  package.xml
planning/motion_velocity_smoother/: CMakeLists.txt  package.xml
planning/obstacle_avoidance_planner/: CMakeLists.txt  package.xml
planning/obstacle_cruise_planner/: CMakeLists.txt  package.xml
planning/obstacle_stop_planner/: CMakeLists.txt  package.xml
planning/obstacle_velocity_limiter/: CMakeLists.txt  package.xml
planning/path_smoother/: CMakeLists.txt  package.xml
planning/planning_debug_tools/: Readme.md  package.xml
planning/planning_validator/: package.xml
planning/rtc_auto_mode_manager/: CMakeLists.txt  package.xml
planning/scenario_selector/: CMakeLists.txt  package.xml
planning/static_centerline_optimizer/: CMakeLists.txt  package.xml
planning/surround_obstacle_checker/: CMakeLists.txt  package.xml
simulator/dummy_perception_publisher/: package.xml
system/external_monitor/: CMakeLists.txt  README.md  package.xml
system/external_monitor/include/external_monitor/: external_monitor_core.hpp
system/external_monitor/launch/: external_monitor.launch.xml
system/external_monitor/src/: external_monitor_core.cpp  external_monitor_node.cpp
(+169 files in other folders)
